Fix incorrect URL on home page.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ The plugin is quite extensible and does not do more than enough. This includes:
 
 ## Usage and extending
 
-Please view the [documentation](/wprsrv/documentation) to learn the usage and extendability of this plugin.
+Please view the [documentation](/documentation) to learn the usage and extendability of this plugin.
 
 ## Contributing
 
